--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "debug": "nodemon --inspect index,js",
+    "debug": "nodemon --inspect index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
